<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_door_2"
    tools:context=".RegisterActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_triangle_second"/>

    <TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentBottom="true"
android:layout_centerHorizontal="true"
android:layout_marginBottom="100dp"
android:text="@string/already_registered_sign_in_here"
android:textColor="@color/DarkBlue"
android:textSize="15dp"
android:id="@+id/log_act_intent"/>

<EditText
    android:id="@+id/reg_name"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/enter_your_name"

android:layout_above="@+id/reg_email"
android:background="@drawable/reg_edt_tet_bg"
android:textSize="20sp"
android:layout_margin="5dp"
android:padding="15dp"
android:textColor="#5d8f6c"
android:textColorHint="@color/DarkPink"
    />

<EditText
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/enter_your_email"
android:id="@+id/reg_email"
android:layout_centerInParent="true"
android:background="@drawable/reg_edt_tet_bg"
android:textSize="20sp"
android:layout_margin="5dp"
android:padding="15dp"
android:textColor="#5d8f6c"
android:textColorHint="@color/DarkPink"
    />

<EditText
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/enter_your_password"
android:id="@+id/reg_password"
    android:inputType="textPassword"
android:layout_below="@+id/reg_email"
android:background="@drawable/reg_edt_tet_bg"
android:textSize="20sp"
android:layout_margin="5dp"
android:padding="15dp"
android:textColor="#5d8f6c"
android:textColorHint="@color/DarkPink"
    />

<Button
android:id="@+id/register"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_below="@+id/reg_password"
android:layout_centerHorizontal="true"
android:layout_marginTop="40dp"
android:background="@drawable/pg_owner_reg_btn_bg"
android:onClick="signup"
android:text="@string/register" />
</RelativeLayout>